@@ -36,11 +36,11 @@
 # (c) 2002-2013 by Mathias Lux (mathias@juggle.at)
 #  http://www.semanticmetadata.net/lire, http://www.lire-project.net
 #
-# Updated: 22.06.13 10:14
+# Updated: 23.06.13 18:22
 #
 
 #Properties of this specific CALIPH build
 #Tue, 09 Apr 2013 13:39:22 +0200
 #Wed Sep 07 12:25:27 CEST 2011
-build-date=2013/06/22 10\:14
-build-number=180
+build-date=2013/06/23 18\:22
+build-number=181
